--- a/www/index.html
+++ b/www/index.html
@@ -17,15 +17,11 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
-  </head>
-  <body ng-app="starter">
+    <script src="js/menu.js"></script>
+    <script src="js/game.js"></script>
 
-    <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
-      </ion-header-bar>
-      <ion-content>
-      </ion-content>
-    </ion-pane>
+  </head>
+  <body ng-app="before_after_numbers">
+    <ion-nav-view></ion-nav-view>
   </body>
 </html>
